diesel_compile_tests/tests/fail/mysql_does_not_support_offset_without_limit.stderr
error[E0277]: `LimitOffsetClause<NoLimitClause, ...>` is no valid SQL fragment for the `Mysql` backend
    --> tests/fail/mysql_does_not_support_offset_without_limit.rs:16:38
     |
  LL |         .get_result::<(i32, String)>(&mut connection);
     |          ----------                  ^^^^^^^^^^^^^^^ the trait `QueryFragment<Mysql>` is not implemented for `LimitOffsetClause<NoLimitClause, ...>`
     |          |
     |          required by a bound introduced by this call
     |
     = note: this usually means that the `Mysql` database system does not support 
             this SQL syntax
help: the following other types implement trait `QueryFragment<DB, SP>`
    --> DIESEL/diesel/diesel/src/mysql/query_builder/limit_offset.rs
     |
   LL |   impl QueryFragment<Mysql> for LimitOffsetClause<NoLimitClause, NoOffsetClause> {
     |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `LimitOffsetClause<NoLimitClause, NoOffsetClause>`
...
  LL | / impl<L> QueryFragment<Mysql> for LimitOffsetClause<LimitClause<L>, NoOffsetClause>
  LL | | where
  LL | |     LimitClause<L>: QueryFragment<Mysql>,
     | |_________________________________________^ `LimitOffsetClause<LimitClause<L>, NoOffsetClause>`
...
  LL | / impl<L, O> QueryFragment<Mysql> for LimitOffsetClause<LimitClause<L>, OffsetClause<O>>
  LL | | where
  LL | |     LimitClause<L>: QueryFragment<Mysql>,
  LL | |     OffsetClause<O>: QueryFragment<Mysql>,
     | |__________________________________________^ `LimitOffsetClause<LimitClause<L>, OffsetClause<O>>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ...>` to implement `QueryFragment<Mysql, AnsiSqlSelectStatement>`
     = note: 1 redundant requirement hidden
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ...>` to implement `QueryFragment<Mysql>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ...>` to implement `LoadQuery<'_, diesel::MysqlConnection, (i32, std::string::String)>`
note: required by a bound in `get_result`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn get_result<'query, U>(self, conn: &mut Conn) -> QueryResult<U>
     |        ---------- required by a bound in this associated function
LL |     where
LL |         Self: LoadQuery<'query, Conn, U>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `RunQueryDsl::get_result`
  
     
error[E0277]: the trait bound `LimitOffsetClause<..., ...>: IntoBoxedClause<'_, ...>` is not satisfied
  --> tests/fail/mysql_does_not_support_offset_without_limit.rs:21:10
   |
LL |         .into_boxed()
   |          ^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `IntoBoxedClause<'_, Mysql>` is not implemented for `LimitOffsetClause<NoLimitClause, ...>`
   = note: this usually means that `LimitOffsetClause<NoLimitClause, ...>` is no valid SQL for `Mysql`
   = help: the following other types implement trait `IntoBoxedClause<'a, DB>`:
             `LimitOffsetClause<L, O>` implements `IntoBoxedClause<'_, Pg>`
             `LimitOffsetClause<LimitClause<L>, NoOffsetClause>` implements `IntoBoxedClause<'_, Mysql>`
             `LimitOffsetClause<LimitClause<L>, NoOffsetClause>` implements `IntoBoxedClause<'_, Sqlite>`
             `LimitOffsetClause<LimitClause<L>, OffsetClause<O>>` implements `IntoBoxedClause<'_, Mysql>`
             `LimitOffsetClause<LimitClause<L>, OffsetClause<O>>` implements `IntoBoxedClause<'_, Sqlite>`
             `LimitOffsetClause<NoLimitClause, NoOffsetClause>` implements `IntoBoxedClause<'_, Mysql>`
             `LimitOffsetClause<NoLimitClause, NoOffsetClause>` implements `IntoBoxedClause<'_, Sqlite>`
             `LimitOffsetClause<NoLimitClause, OffsetClause<O>>` implements `IntoBoxedClause<'_, Sqlite>`
   = note: required for `SelectStatement<..., ..., ..., ..., ..., ...>` to implement `BoxedDsl<'_, Mysql>`

   
error[E0277]: the trait bound `LimitOffsetClause<..., ...>: IntoBoxedClause<'_, ...>` is not satisfied
    --> tests/fail/mysql_does_not_support_offset_without_limit.rs:21:10
     |
  LL |         .into_boxed()
     |          ^^^^^^^^^^ unsatisfied trait bound
     |
     = help: the trait `IntoBoxedClause<'_, Mysql>` is not implemented for `LimitOffsetClause<NoLimitClause, ...>`
     = note: this usually means that `LimitOffsetClause<NoLimitClause, ...>` is no valid SQL for `Mysql`
     = help: the following other types implement trait `IntoBoxedClause<'a, DB>`:
               `LimitOffsetClause<L, O>` implements `IntoBoxedClause<'_, Pg>`
               `LimitOffsetClause<LimitClause<L>, NoOffsetClause>` implements `IntoBoxedClause<'_, Mysql>`
               `LimitOffsetClause<LimitClause<L>, NoOffsetClause>` implements `IntoBoxedClause<'_, Sqlite>`
               `LimitOffsetClause<LimitClause<L>, OffsetClause<O>>` implements `IntoBoxedClause<'_, Mysql>`
               `LimitOffsetClause<LimitClause<L>, OffsetClause<O>>` implements `IntoBoxedClause<'_, Sqlite>`
               `LimitOffsetClause<NoLimitClause, NoOffsetClause>` implements `IntoBoxedClause<'_, Mysql>`
               `LimitOffsetClause<NoLimitClause, NoOffsetClause>` implements `IntoBoxedClause<'_, Sqlite>`
               `LimitOffsetClause<NoLimitClause, OffsetClause<O>>` implements `IntoBoxedClause<'_, Sqlite>`
     = note: required for `SelectStatement<..., ..., ..., ..., ..., ...>` to implement `BoxedDsl<'_, Mysql>`
note: required by a bound in `diesel::QueryDsl::into_boxed`
    --> DIESEL/diesel/diesel/src/query_dsl/mod.rs
     |
LL |     fn into_boxed<'a, DB>(self) -> IntoBoxed<'a, Self, DB>
     |        ---------- required by a bound in this associated function
...
LL |         Self: methods::BoxedDsl<'a, DB>,
     |               ^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::into_boxed`
  
     For more information about this error, try `rustc --explain E0277`.
